<resources>
    <string name="app_name">W3_P3</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="zerDecimal">0.00</string>
    <string name="thirtyTwoDeci">32.00</string>
    <string name="interestingMsg">Interesting Message</string>
    <string name="msgWarmer">I wish it were warmer.</string>
    <string name="msgColder">I wish it were colder.</string>
</resources>